2016-09-03  Markus Gans  <guru.mail@muenster.de>
	* The method clearFlatBorder() replace now a double flatline 
	  with a single flatline
	* Add the possibility to set the double_flatline_mask for 
	  every position on all sides

2016-09-02  Markus Gans  <guru.mail@muenster.de>
	* Method setGeometry assigns now the full widget size to 
	  the double_flatline_mask (previously, it was the adjust size)

2016-08-28  Markus Gans  <guru.mail@muenster.de>
	* Remove obsolete code from FDialog
	* An incorrect parameter can now return an error message 
	  on program exit
	* Termcap S2 and S3 fallback only for the vte/gnome-terminal 
	  and the linux terminal

2016-08-27  Markus Gans  <guru.mail@muenster.de>
	* A new inherit background option for characters
	* Use inherit background for the simple shadows
	* Updating the transparent example program

2016-08-25  Markus Gans  <guru.mail@muenster.de>
	* Use the new transparent shadow option in drawShadow()

2016-08-21  Markus Gans  <guru.mail@muenster.de>
	* Improved transparent shadow background
	* Add "transparent" example to demonstrate transparency

2016-08-20  Markus Gans  <guru.mail@muenster.de>
	* Switch back to the own dialog when you closing a dialog menu
	* switchToPrevWindow() is looking for another window 
	  if no previous window was found

2016-08-14  Markus Gans  <guru.mail@muenster.de>
	* Screen characters now have a transparent 
	  and a transparent shadow option

2016-07-31  Markus Gans  <guru.mail@muenster.de>
	* Rename setUpdateVTerm to updateVTerm
	* Rename clrscr to clearArea
	* The widget clearing method updates now only non-covered 
	  characters on the virtual terminal.

2016-07-31  Markus Gans  <guru.mail@muenster.de>
	* Resetting the local window widget focus at 
	  the end of the lifetime of a widget.
	* Fix method setPos in the class FRect
	* Add the windows example to show the window behavior

2016-07-30  Markus Gans  <guru.mail@muenster.de>
	* Delete all callbacks from a widget with delCallbacks()